--- a/app/src/main/res/layout/activity_mdtext.xml
+++ b/app/src/main/res/layout/activity_mdtext.xml
@@ -1,65 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#eeeeee"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
+        android:layout_height="match_parent">
+        <include layout="@layout/include_toolbar"/>
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/srl_content_repository"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <LinearLayout
-                android:id="@+id/ll_reository"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"></LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_mdtext"
-            android:layout_below="@+id/ll_reository"
-            android:gravity="left"
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        </RelativeLayout>
-        <LinearLayout
-            android:id="@+id/ll_md_loading_fail"
-            android:visibility="gone"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        <LinearLayout
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:background="@mipmap/nothing"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:text="README Loadding Fail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-            <TextView
-                android:layout_marginTop="20dp"
-                android:textColor="#8f8f8f"
-                android:gravity="center"
-                android:textSize="16dp"
-                android:text="ReTry"
-                android:background="@drawable/white_raduis_bg"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+                android:layout_height="wrap_content">
+                <android.support.v7.widget.CardView
+                    android:elevation="2dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="5dp"
+                    android:translationZ="1dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recyclerview_repository"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </android.support.v7.widget.CardView>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:id="@+id/ll_reository"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </LinearLayout>
+                    <android.support.v7.widget.CardView
+                        android:layout_marginTop="20dp"
+                        android:layout_margin="5dp"
+                        android:elevation="2dp"
+                        app:cardCornerRadius="5dp"
+                        android:translationZ="3dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="20dp"
+                            android:id="@+id/tv_mdtext"
+                            android:layout_below="@+id/ll_reository"
+                            android:gravity="left"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:textFontWeight="1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.v7.widget.CardView>
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
-
 </ScrollView>
