--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+    android:id="@+id/cl_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -64,6 +65,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:button="@null"
+                            android:checked="true"
                             android:gravity="center"
                             android:text="Repositories"
                             android:textColor="@drawable/radio_bg"
@@ -119,7 +121,7 @@
                         android:layout_height="90dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="20dp"
-                        android:src="@mipmap/nothing" />
+                         />
 
                     <TextView
                         android:id="@+id/user_name"
@@ -129,7 +131,6 @@
                         android:layout_alignLeft="@+id/user_img"
                         android:layout_marginLeft="109dp"
                         android:layout_marginTop="-79dp"
-                        android:text="Nixo"
                         android:textColor="#fff"
                         android:textSize="24dp" />
 
@@ -141,7 +142,6 @@
                         android:layout_alignLeft="@+id/user_img"
                         android:layout_marginLeft="111dp"
                         android:layout_marginTop="-34dp"
-                        android:text="Dear You ❤"
                         android:textColor="#fff"
                         android:textSize="15dp" />
 
