--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#ffc400</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#e7e7e7</color>
     <color name="main_color">#24292f</color>
