--- a/app/src/main/res/layout/activity_mdtext.xml
+++ b/app/src/main/res/layout/activity_mdtext.xml
@@ -49,7 +49,7 @@
                         android:translationZ="3dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-                        <TextView
+                        <io.github.kbiakov.codeview.CodeView
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="20dp"
                             android:id="@+id/tv_mdtext"
